--- a/index.html
+++ b/index.html
@@ -49,7 +49,12 @@
         <div class="main-banner">
             <div class="wrapper">
                 <div class="main-content">
-                        <h1>Flavours for <br><span> every Mood</span></h1>
+                        <div class="main-title">
+                          <span class="title-word title-word-1">Flavours</span>
+                          <span class="title-word title-word-2">for</span> <br>
+                          <span class="title-word title-word-3">every </span>
+                          <span class="title-word title-word-4">Mood</span>
+                        </div>
                         <a class="button1" href="shop.html">Shop</a>
                     <img src="images/banner-img.png" alt="Ice cream banner">
                 </div>
