--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
         </div>
         <div class="rights">
             <p> <i class="fa-solid fa-envelope"></i> info@glaceandvibes.com</p>
-            <p>© Copyright Three Star Media, 2021</p>
+            <p>© Copyright 2022</p>
         </div>
     </footer>
 </body>
